data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2057.wast
;; 7. **Test Description**: Using `br_table` with operand values that intentionally mismatch the branching labels to test if improper label indexing results in an unexpected control flow or execution failure.

(assert_invalid
 (module
  (func $mismatch_operand_labels
   (block $label0
    (block $label1
     (br_table $label0 $label1 $label1 (i32.const 3))
    )
   )
  )
 )
 "label index out of bounds"
)